# kivy-launcher

./: main.py  packman.py  pyproject.toml
.github/workflows/: android_buildozer_debug.yml  main.yaml
launcher/: app.kv  app.py
services/: service.py
